Mon Dec 15 23:31:56 1997  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* polys-impl.h: Various small bug - fixes and changes in
	  preparation of COMP_FAST merge: hilbert series, maps are 
	  ok; sres and syz are still buggy; small things still need to be
	  checked;

Fri Dec 12 15:38:19 1997  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* mmallocb.c (mmDBFreeBlock): introduced UNREG_MEM_PATTERN which,
	  when defined, inserts unregular memory pattern in
	  allocated/freed memory 

	* all: changed dangerous pNew calls to pInit's

Fri Dec  5 18:43:47 MET 1997
        * hannes: fix to ideals.cc: avoid pGetExp(p,0)

Thu Dec  4 16:13:31 MEZ 1997 Kai Krueger <krueger@mathematik.uni-kl.de>
	* ndbm.cc: don't replace bcopy by memcpy if possible, otherwise
	  the database (>1024 bytes) will be corrupted.
	- added check for bcopy() in configure.
	
Wed Dec  3 16:14:51 1997  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* Many changes to prepare for implementation of fast comparison
		  schemes: Here are only a few:
	- added file polys-impl.h which implements low-level poly stuff 
	- removed file polys2.cc, added polys-impl.cc 
	- added Singularp target to Make
	- prepared configure for setting of exponent type
	- got rid of as many direct p->exp[..] accesses as possible
	- added file spSpolyLoop.cc spSpolyLoop.h polys-comp.h
	* polys-impl.h: if you defined COMP_FAST, then fast polynomial
		  comparsions are eanbled (still needs a lot of debugging)
	

Fri Oct 31 05:45:25 1997  Olaf Bachman  <bachman@bombelli.dm.unipi.it>

	* polys1.cc et al: got rid of p[Get/Set]ExpV routines, provided
		  pCopy2 instead

Wed Oct  8 12:22:47 1997  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* increased version number to 1.1.3

	* ndbm.cc: Solaris compatibility: #define bcopy bzero, bcmp;
		  #include <fcntl.h> 
	* configure.in: added check for fcntl.h sys/types.h sys/stat.h, ucblib
	  ensured that either lgmp or lsmallgmp is in $LIBS

Tue Sep 16 15:45:44 MET DST 1997